--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,7 @@
 .wrapper{
     display: grid;
     grid-template-columns: 2fr  1fr;
-    grid-template-rows: 3fr 3fr 2fr 2fr;
+    grid-template-rows: 3fr 1fr 2fr 2fr;
     grid-template-areas: 
     "header     header"
     "nav        nav"
@@ -29,7 +29,39 @@
 }
 .nav{
     grid-area: nav;
+    
+   
 }
+/* Navigation Bar Content */
+
+nav {
+        border-top: solid black;
+        border-bottom: solid black;
+        padding: 0;
+        margin: 0;
+        height:40px;
+    }
+
+nav ul li {
+    list-style: none;
+    display: inline-block;
+    margin: -1px auto;
+    font-size: 25px;
+    padding: 0;
+    transform: translate(10px, -10px);
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+a:hover 
+{
+     color:#00A0C6; 
+     text-decoration:none; 
+     cursor:pointer;  
+}
+
 .content{
     grid-area: content;
 }
