--- a/css/about.css
+++ b/css/about.css
@@ -1,60 +1,65 @@
+body {
+    margin:0;padding:0
+}
+
 .wrapper{
     display: grid;
-    grid-template-columns: 2fr  1fr;
-    grid-template-rows: 3fr 3fr 2fr 2fr;
+    /* grid-template-columns: 1fr 2fr  1fr 1fr; */
+    /* grid-template-rows: 1fr .4fr 1fr 1fr; */
     grid-template-areas: 
-    "header header"
-    "nav    nav"
-    "link  content"
-    "footer footer";
-    grid-gap: 1em;
+        "l_side header     header       r_side"
+        "l_side nav        nav          r_side"
+        "l_side left-sidebar    content      r_side"
+        "l_side left-sidebar    content      r_side"
+        "l_side footer footer r_side";
+    /* grid-gap: 1em; */
 }
-.wrapper > div {
-    background: #eee;
-    padding: 1em;
+.l_side{
+    grid-area: l_side;
 }
-.wrapper > div:nth-child(odd){
-        background: #ddd;}
+.r_side{
+    grid-area: r_side;
+}
+.side-panel{
+    max-width: 284px;
+    height: 894px;
+}
 
+.logo{
+    margin-left: 20px;
+    border-style: double;
+}
 /* Header Starts Here */ 
-
 .header{
+    
     grid-area: header;
 }
-
 .banner{
     display: inline-block;
     width: 277px;
     font-size: large;
     margin-left: 4px;
 }  
-
-/* NavBar Content Begins Here */
-
-.nav{
-    grid-area: nav;
-    
-   
+.nav{   
+    grid-area: nav; 
 }
-/* Items in Nav Bar */
-
+/* Navigation Bar Content */
 nav {
+    margin-left: 20px;
         border-top: solid black;
         border-bottom: solid black;
         padding: 0;
-        margin: 0;
-        height:40px;
+        height:28px;
+    margin-right: 20px; 
     }
-
 nav ul li {
     list-style: none;
     display: inline-block;
     margin: -1px auto;
-    font-size: 25px;
+    font-size: 16px;
     padding: 0;
     transform: translate(10px, -10px);
 }
-
 #bar {
     text-align: justify;
     min-width: 500px;
@@ -79,15 +84,52 @@ a:hover
      text-decoration:none; 
      cursor:pointer;  
 }
+/* Navigation Bar Content Ends */ 
 
-/*End of NavBar Content */ 
+.left-sidebar{
+    margin-top: 15px;
+    margin-left: 20px;
+    grid-area: left-sidebar;
+    margin-right: 30px;
+    background-color: rgb(116, 29, 29);
+    float:left; 
+    height: 400px; 
+    width:200px; 
+    padding:10px;
+    color: white;
+}
 
+.left-sidebar > p >a[href^="#"] {
+    color: white;
+}
 .content{
     grid-area: content;
+    margin-right: 20px;
 }
-.newsfeed{
-    grid-area: newsfeed;
+
+.photo-grid{
+    grid-column: col 3 / span 2;
+    grid-row: row 2;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr 1fr;
 }
+h2 span { 
+    color: white; 
+    font: bold 24px/45px Helvetica, Sans-Serif; 
+    letter-spacing: -1px;  
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px; 
+ }
+/* .welcome {
+    position: absolute;    
+    height: 100%;
+    text-align: center;    
+    width: 100%;
+} */
+
+
 .footer{
     grid-area: footer;
 }
@@ -96,11 +138,13 @@ a:hover
 footer{
     border-top: 2px solid black;
     text-align: center;
+    margin-right: 20px;
+    margin-left: 20px;
 }
 footer ul {
     list-style-type: none;
     padding-top: 1px;
-    width: 70%;
+    width: 90%;
     margin: auto;
   }
 footer ul li{
@@ -122,9 +166,7 @@ footer h6{
     color: grey;
 }
 
-.link{
-    grid-area: link;
-}
+
 #gmap_canvas{
     border-radius: 5px;
     
