--- a/css/about.css
+++ b/css/about.css
@@ -114,22 +114,46 @@ a:hover
     grid-gap: 10px;
     grid-template-columns: 1fr 1fr;
 }
-h2 span { 
-    color: white; 
-    font: bold 24px/45px Helvetica, Sans-Serif; 
-    letter-spacing: -1px;  
-    background: rgb(0, 0, 0); /* fallback color */
-    background: rgba(0, 0, 0, 0.7);
-    padding: 10px; 
- }
-/* .welcome {
-    position: absolute;    
-    height: 100%;
-    text-align: center;    
-    width: 100%;
-} */
-
-
+.caption1{
+    color: rgb(116, 29, 29);
+    font-size: 30px;
+    position: absolute;
+    top: 57%;
+    left: 43%;
+    transform: translate(-50%, -50%); 
+}
+.caption2{
+    color: rgb(116, 29, 29);
+    font-size: 30px;
+    position: absolute;
+    top: 57%;
+    left: 64%;
+    transform: translate(-50%, -50%); 
+}
+.caption3{
+    color: rgb(116, 29, 29);
+    font-size: 30px;
+    position: absolute;
+    top: 73%;
+    left: 41%;
+    transform: translate(-50%, -50%); 
+}
+.caption4{
+    color: rgb(116, 29, 29);
+    font-size: 30px;
+    position: absolute;
+    top: 73%;
+    left: 64%;
+    transform: translate(-50%, -50%); 
+}
+.caption5{
+    color: rgb(116, 29, 29);
+    font-size: 30px;
+    position: absolute;
+    top: 79%;
+    left: 42%;
+    transform: translate(-50%, -50%); 
+}
 .footer{
     grid-area: footer;
 }
